--- a/Share Beauty App/Base.lproj/TopViewController.storyboard
+++ b/Share Beauty App/Base.lproj/TopViewController.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,26 +29,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfl-x2-Qdx">
-                                        <rect key="frame" x="38" y="693" width="46" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="46" id="QYJ-RR-QJ9"/>
-                                            <constraint firstAttribute="height" constant="30" id="VaO-8P-qGh"/>
-                                        </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <action selector="goGscView:" destination="XiQ-gF-w7j" eventType="touchUpInside" id="JOM-y9-qLP"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="wfl-x2-Qdx" secondAttribute="bottom" constant="25" id="AFO-iN-J2p"/>
                                     <constraint firstAttribute="trailing" secondItem="dPy-jX-cZZ" secondAttribute="trailing" id="FIr-f4-npx"/>
                                     <constraint firstItem="dPy-jX-cZZ" firstAttribute="top" secondItem="PoE-RB-gRx" secondAttribute="top" id="KXM-7M-HMj"/>
                                     <constraint firstAttribute="width" constant="507" id="OUH-Lu-g3p"/>
                                     <constraint firstItem="dPy-jX-cZZ" firstAttribute="leading" secondItem="PoE-RB-gRx" secondAttribute="leading" id="Uks-90-J9i"/>
                                     <constraint firstAttribute="bottom" secondItem="dPy-jX-cZZ" secondAttribute="bottom" id="b5B-fK-kzu"/>
-                                    <constraint firstItem="wfl-x2-Qdx" firstAttribute="leading" secondItem="PoE-RB-gRx" secondAttribute="leading" constant="38" id="iIU-fg-Hif"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FHi-aa-YBh">
