--- a/Share Beauty App/Views/LifeStyleEighthProductView.xib
+++ b/Share Beauty App/Views/LifeStyleEighthProductView.xib
@@ -38,6 +38,9 @@
                                 <constraint firstAttribute="width" constant="200" id="3xm-tH-AXe"/>
                                 <constraint firstAttribute="height" constant="200" id="cwX-9W-Dmc"/>
                             </constraints>
+                            <connections>
+                                <action selector="handleProductButton_Tap:" destination="-1" eventType="touchUpInside" id="jSj-dk-a0e"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yoU-8w-xCQ">
                             <rect key="frame" x="18" y="96" width="282" height="60"/>
@@ -87,6 +90,9 @@
                             </constraints>
                             <state key="normal" image="icon_recommend_large"/>
                             <state key="selected" image="icon_recommend_selected_large"/>
+                            <connections>
+                                <action selector="handleRecommendButton_Tap:" destination="-1" eventType="touchUpInside" id="d0t-5B-aG7"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
