--- a/Share Beauty App/Base.lproj/MakeupViewController.storyboard
+++ b/Share Beauty App/Base.lproj/MakeupViewController.storyboard
@@ -129,12 +129,12 @@
                                                 <cells/>
                                             </collectionView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ss0-Sb-s05">
-                                                <rect key="frame" x="83" y="20" width="89" height="44"/>
+                                                <rect key="frame" x="69" y="20" width="151" height="44"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="89" id="F86-Zq-zU4"/>
+                                                    <constraint firstAttribute="width" constant="151" id="F86-Zq-zU4"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                <state key="normal" title="dummy">
+                                                <state key="normal" title="Foundation Finder">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
@@ -148,8 +148,7 @@
                                             <constraint firstItem="Ss0-Sb-s05" firstAttribute="top" secondItem="iNn-wk-4mK" secondAttribute="top" constant="20" id="Kou-NW-WNi"/>
                                             <constraint firstItem="3HT-ep-D08" firstAttribute="top" secondItem="nDq-xP-e7Q" secondAttribute="bottom" constant="30" id="X2q-nd-WKc"/>
                                             <constraint firstItem="nDq-xP-e7Q" firstAttribute="top" secondItem="iNn-wk-4mK" secondAttribute="top" constant="30" id="Xk8-Fj-WlN"/>
-                                            <constraint firstItem="Ss0-Sb-s05" firstAttribute="leading" secondItem="rdY-RT-hgV" secondAttribute="trailing" constant="29" id="Z0a-gg-ZDT"/>
-                                            <constraint firstItem="Ss0-Sb-s05" firstAttribute="leading" secondItem="rdY-RT-hgV" secondAttribute="trailing" constant="29" id="ZX8-qf-BD8"/>
+                                            <constraint firstItem="Ss0-Sb-s05" firstAttribute="leading" secondItem="rdY-RT-hgV" secondAttribute="trailing" constant="15" id="Z0a-gg-ZDT"/>
                                             <constraint firstItem="nDq-xP-e7Q" firstAttribute="centerX" secondItem="iNn-wk-4mK" secondAttribute="centerX" id="hT9-UV-Qtd"/>
                                             <constraint firstAttribute="trailing" secondItem="3HT-ep-D08" secondAttribute="trailing" id="s6D-zi-Tyq"/>
                                             <constraint firstAttribute="bottom" secondItem="3HT-ep-D08" secondAttribute="bottom" constant="30" id="sHa-Wf-wct"/>
